RESOLVED FIXED199701
MobileSafari may crash under -[UIKeyboardTaskExecutionContext transferExecutionToMainThreadWithTask:]
https://bugs.webkit.org/show_bug.cgi?id=199701
Summary MobileSafari may crash under -[UIKeyboardTaskExecutionContext transferExecuti...
Wenson Hsieh
Reported 2019-07-10 20:46:23 PDT
Attachments
Test (287 bytes, text/html)
2019-07-10 21:02 PDT, Wenson Hsieh
no flags
Patch (3.00 KB, patch)
2019-07-10 21:03 PDT, Wenson Hsieh
no flags
Patch for landing (4.74 KB, patch)
2019-07-10 22:15 PDT, Wenson Hsieh
no flags
Wenson Hsieh
Comment 1 2019-07-10 21:02:09 PDT
Wenson Hsieh
Comment 2 2019-07-10 21:03:16 PDT
Tim Horton
Comment 3 2019-07-10 21:44:23 PDT
Maybe we want a helper “dispatch failed to fetch autocorrection context if needed” (not a good name but you get the idea). to make the sending empty data more semantically clear at callers, since there are now at least three
Wenson Hsieh
Comment 4 2019-07-10 22:03:05 PDT
(In reply to Tim Horton from comment #3) > Maybe we want a helper “dispatch failed to fetch autocorrection context if > needed” (not a good name but you get the idea). to make the sending empty > data more semantically clear at callers, since there are now at least three Makes sense! I’ll add a _cancelPendingAutocorrectionContextHandler, and adopt it in the few places that call the completion handler with empty info.
Wenson Hsieh
Comment 5 2019-07-10 22:15:54 PDT
Created attachment 373906 [details] Patch for landing
WebKit Commit Bot
Comment 6 2019-07-11 00:34:25 PDT
Comment on attachment 373906 [details] Patch for landing Clearing flags on attachment: 373906 Committed r247345: <https://trac.webkit.org/changeset/247345>
WebKit Commit Bot
Comment 7 2019-07-11 00:34:26 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.